k8s/deployment.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: tknfoo
  name: tknfoo
spec:
  replicas: 1
  selector:
    app: tknfoo
    deploymentconfig: tknfoo
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: tknfoo
        deploymentconfig: tknfoo
    spec:
      containers:
      - image: 'image-registry.openshift-image-registry.svc:5000/development/tknfoo'
        imagePullPolicy: Always
        name: tknfoo
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      containerNames:
      - tknfoo
      from:
        kind: ImageStreamTag
        name: tknfoo:latest
    type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tknfoo
  name: tknfoo
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: tknfoo
    deploymentconfig: tknfoo
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: tknfoo
  name: tknfoo
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: tknfoo
    weight: 100
